--- a/style.css
+++ b/style.css
@@ -16,6 +16,13 @@ section {
     justify-content: center;
 }
 
+@media only screen and (max-width: 600px) {
+    section {
+        height: auto;
+        margin-top: 30px;
+    }
+}
+
 .flip-card {
     background-color: transparent;
     width: 100%;
